--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@tanstack/react-query": "^5.64.2",
     "@types/ws": "^8.5.14",
+    "@vercel/analytics": "^1.5.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.474.0",
